--- a/create-producer-account/producer-bankingdetails.html
+++ b/create-producer-account/producer-bankingdetails.html
@@ -20,51 +20,60 @@
             <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
           </ul>
           </nav>
-    </div>
-  </header>
+       </div>
+    </header>
 
     <main>
         <section class="circle-section">
-        <div class="circle">  
+          <div class="circle">  
             <i class="fas fa-circle"></i>
-        </div>
-        <div class="active-circle">
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-    </section>
+          </div>
+            <div class="active-circle">
+              <i class="fas fa-circle"></i>
+            </div>
+              <div class="circle">  
+                <i class="fas fa-circle"></i>
+              </div>
+          </section>
 
-        <form action="submit.php" method="GET">
+      <form action="submit.php" method="GET">
         <fieldset class="banking-details">
-            <div class="grid-h1">
+          <div class="grid-h1">
             <h1 class="h1-form">Banking details</h1>
-            <p>Everytime someone watches your work, you will get paid</p>
-        </div>
-            <p><label for="fullname">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
-            <p><label for="adress">Address</label>
-            <input type="text" name="address" class="form__input" required></p>
-            <p><label for="city">City</label>
-            <input type="text" name="city" class="form__input" required></p>
-            <p><label for="zipcode">Zip code</label>
-            <input type="text" name="zipcode" class="form__input" required></p>
-            <p><label for="country">Country</label>
-            <input type="text" name="country" class="form__input" required></p>
-            <p><label for="iban">Iban</label>
-            <input type="text" name="iban" class="form__input" required></p>
-            <p><label for="swift-bic">Swift / Bic</label>
-            <input type="text" name="swift-bic" class="form__input" required></p>
-            <p><label for="bankcode">Bankcode (US)</label>
-            <input type="text" name="bankcode" class="form__input"></p>
+              <p>Everytime someone watches your work, you will get paid</p>
+          </div>
+            <p>
+              <label for="fullname">Full name</label>
+                <input type="text" name="fullname" class="form__input" required></p>
+            <p>
+              <label for="adress">Address</label>
+                <input type="text" name="address" class="form__input" required></p>
+            <p>
+              <label for="city">City</label>
+                <input type="text" name="city" class="form__input" required></p>
+            <p>
+              <label for="zipcode">Zip code</label>
+                <input type="text" name="zipcode" class="form__input" required></p>
+            <p>
+              <label for="country">Country</label>
+                <input type="text" name="country" class="form__input" required></p>
+            <p>
+              <label for="iban">Iban</label>
+                <input type="text" name="iban" class="form__input" required></p>
+            <p>
+              <label for="swift-bic">Swift / Bic</label>
+                <input type="text" name="swift-bic" class="form__input" required></p>
+            <p>
+              <label for="bankcode">Bankcode (US)</label>
+                <input type="text" name="bankcode" class="form__input"></p>
          </fieldset>
-         <button class="arrow-button"><a href="producer-creditcard.html"><i class="fas fa-arrow-circle-right"></i></a></button>
+            <button class="arrow-button">
+              <a href="producer-creditcard.html">
+                <i class="fas fa-arrow-circle-right">
+                </i>
+              </a>
+            </button>
         </form>
-
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
