--- a/create-producer-account/producer-personal.html
+++ b/create-producer-account/producer-personal.html
@@ -25,40 +25,45 @@
 
     <main>
         <section class="circle-section">
-        <div class="active-circle">
+          <div class="active-circle">
             <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
-            <i class="fas fa-circle"></i>
-        </div>
-        </section>
+          </div>
+            <div class="circle">  
+              <i class="fas fa-circle"></i>
+            </div>
+              <div class="circle">  
+                <i class="fas fa-circle"></i>
+              </div>
+          </section>
 
      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
             <h1 class="h1-form">Personal information</h1>
-            <p><label for="fullname" class="">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
-            <p><label for="e-mail">E-mail</label>
-            <input type="text" name="e-mail" class="form__input" required></p>
-            <p><label for="birthdate">Birth date</label>
-            <input type="text" name="birthdate" class="form__input"required></p>
-            <p><label for="password">Choose your password</label>
-            <input type="text" name="password" class="form__input"required></p>
-            <div class="newsletter-section">
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
-            <p>Send newsletters to my e-mail address</p>
-        </div>
-        </fieldset>
-        <button class="arrow-button"><a href="producer-bankingdetails.html"><i class="fas fa-arrow-circle-right"></i></a></button>
-     </form>
-    
-    </body>
+              <p>
+                <label for="fullname" class="">Full name</label>
+                  <input type="text" name="fullname" class="form__input" required></p>
+              <p>
+                <label for="e-mail">E-mail</label>
+                  <input type="text" name="e-mail" class="form__input" required></p>
+              <p>
+                <label for="birthdate">Birth date</label>
+                  <input type="text" name="birthdate" class="form__input"required></p>
+              <p>
+                <label for="password">Choose your password</label>
+                  <input type="text" name="password" class="form__input"required></p>
+                    <div class="newsletter-section">
+                      <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
+                        <p>
+                          Send newsletters to my e-mail address</p>
+                     </div>
+          </fieldset>
+            <button class="arrow-button">
+              <a href="producer-bankingdetails.html">
+                <i class="fas fa-arrow-circle-right">
+                </i>
+              </a>
+            </button>
+        </form>
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
