--- a/create-producer-account/producer-success.html
+++ b/create-producer-account/producer-success.html
@@ -26,12 +26,11 @@
     <main>
         <section class="success-section">
             <div class="check-icon-big"><i class="fas fa-check"></i></div>
-            <h1>You successfully became a member</h1>
-               <div><a href="../account-producer.html" class="button1">Go to account</a></div>
+              <h1>You successfully became a member</h1>
+                <div>
+                  <a href="../account-producer.html" class="button1">Go to account</a>
+                </div>
           </section>
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
