--- a/create-watcher-account/watcher-creditcard.html
+++ b/create-watcher-account/watcher-creditcard.html
@@ -20,8 +20,8 @@
             <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
           </ul>
           </nav>
-    </div>
-  </header>
+      </div>
+     </header>
 
     <main>
         <section class="circle-section">
@@ -36,27 +36,27 @@
             <form action="submit.php" method="GET">
                 <fieldset class="credit-card">
                     <div class="grid-h1">
-                    <h1 class="h1-form">Register your credit card</h1>
-                    <p>* This step is optional. By adding this information you do not have to</p>
-                    <p>type your credit card information everytime you are going to watch a film.</p>
+                      <h1 class="h1-form">Register your credit card</h1>
+                        <p>* This step is optional. By adding this information you do not have to</p>
+                        <p>type your credit card information everytime you are going to watch a film.</p>
                     </div>
-                    <p><label for="cardnumber">Cardnumber</label>
-                    <input type="text" name="cardnumber" class="form__input"></p>
-                    <p><label for="cardholdername">Cardholder name</label>
-                    <input type="text" name="cardholdername" class="form__input"></p>
-                    <p><label for="expiredate">Expire date</label>
-                    <input type="text" name="expiredate" class="form__input"></p>
-                    <p><label for="cvv">CVV</label>
-                    <input type="text" name="cvv" class="form__input"></p>
-                    <p><label for="country">Country</label>
-                    <input type="text" name="country" class="form__input"></p>
+                      <p><label for="cardnumber">Cardnumber</label>
+                        <input type="text" name="cardnumber" class="form__input"></p>
+                      <p><label for="cardholdername">Cardholder name</label>
+                        <input type="text" name="cardholdername" class="form__input"></p>
+                      <p><label for="expiredate">Expire date</label>
+                        <input type="text" name="expiredate" class="form__input"></p>
+                      <p><label for="cvv">CVV</label>
+                        <input type="text" name="cvv" class="form__input"></p>
+                      <p><label for="country">Country</label>
+                        <input type="text" name="country" class="form__input"></p>
                  </fieldset>
-                 <button class="arrow-button"><a href="watcher-success.html"><i class="fas fa-arrow-circle-right"></i></a></button>
-                 </form>
-    </body>
-    </main>
-
-    <footer>
-
-    </footer>
+                  <button class="arrow-button">
+                    <a href="watcher-success.html">
+                      <i class="fas fa-arrow-circle-right"></i>
+                    </a>
+                  </button>
+              </form>
+      </main>
+  </body>
 </html>
