--- a/manage-account/manage-account-pro.html
+++ b/manage-account/manage-account-pro.html
@@ -24,56 +24,57 @@
   </head>
 
   <body>
-    <body>
-        <header class="small-header">
-          <div class="small-header-wrap">
-            <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
-              <nav class="right-nav">
-               <ul>
-                <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-              </ul>
-              </nav>
+      <header class="small-header">
+        <div class="small-header-wrap">
+          <a href="../index.html">
+            <img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+          <nav class="right-nav">
+            <ul>
+              <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            </ul>
+          </nav>
         </div>
       </header>
+      
+     <main>
+      <div class="producer-profile-grid">
+        <section class="producer-section">
+          <img src="../images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
+            <div class="upload-profile-picture-button">
+              <div class="button2">
+                <div class="button2-icon">
+                  <i class="fas fa-upload"></i>
+                </div>Upload profile picture</div>
+              </div>
+            <h1>Name Surname</h1>
+              <form>
+                <label for="producer-description" class="description">Description</label>
+                  <textarea class="form__input-description" name="producer-description" rows="5" cols="50"></textarea>
+               </form>
+          </section>
 
-  <div class="producer-profile-grid">
-      <section class="producer-section">
-        <img src="../images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
-        <div class="upload-profile-picture-button">
-        <div class="button2">
-            <div class="button2-icon">
-                <i class="fas fa-upload"></i>
-        </div>Upload profile picture</div></div>
-        <h1>Name Surname</h1>
-        <form>
-        <label for="producer-description" class="description">Description</label>
-            <textarea class="form__input-description" name="producer-description" rows="5" cols="50"></textarea>
-        </form>
-      </section>
-
-      <section class="film-section">
-        <div class="manage-film-section">
-        <div class="button2">
-            <div class="button2-icon">
-                <i class="fas fa-upload"></i>
-            </div>Upload film</div>
-        <div class="button2">
-            <div class="button2-icon">
-                <i class="fas fa-upload"></i>
-            </div>Upload film picture</div>
-        <p><label for="film-title">Film title</label>
-            <input type="text" name="film-title" class="form__input"></p>
-        <p><label for="film-description" class="description">Description</label>
-            <textarea class="form__input-description" name="film-description" rows="5" cols="50"></textarea></p>
-        <p><label for="tags">Tags</label>
-            <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
-        </div>  
-      </section>
-
-      <div class="save-changes-button"><a href="../account-producer.html" class="button1">Save changes</a></div>
-  </div>
-   
-    <footer>
-
-    </footer>
-</html>
+        <section class="film-section">
+          <div class="manage-film-section">
+            <div class="button2">
+               <div class="button2-icon">
+                  <i class="fas fa-upload"></i>
+                </div>Upload film</div>
+                  <div class="button2">
+                    <div class="button2-icon">
+                      <i class="fas fa-upload"></i>
+                    </div>Upload film picture</div>
+                      <p><label for="film-title">Film title</label>
+                         <input type="text" name="film-title" class="form__input"></p>
+                      <p><label for="film-description" class="description">Description</label>
+                         <textarea class="form__input-description" name="film-description" rows="5" cols="50"></textarea></p>
+                      <p><label for="tags">Tags</label>
+                        <input type="text" name="tags" placeholder="Catogory etc.." class="form__input"></p>
+              </div>  
+          </section>
+            <div class="save-changes-button">
+              <a href="../account-producer.html" class="button1">Save changes</a>
+            </div>
+            </div>
+     </main>
+    </body>
+  </html>
