--- a/manage-account/manage-bankdetails-pro.html
+++ b/manage-account/manage-bankdetails-pro.html
@@ -16,41 +16,41 @@
       <div class="small-header-wrap">
         <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
-           <ul>
-            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-          </ul>
+            <ul>
+              <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            </ul>
           </nav>
-    </div>
-  </header>
-
-        <form action="submit.php" method="GET">
-        <fieldset class="banking-details">
-            <div class="grid-h1">
-            <h1 class="h1-form">Banking details</h1>
         </div>
+    </header>
+
+    <main>
+      <form action="submit.php" method="GET">
+        <fieldset class="banking-details">
+          <div class="grid-h1">
+            <h1 class="h1-form">Banking details</h1>
+          </div>
             <p><label for="fullname">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
+              <input type="text" name="fullname" class="form__input" required></p>
             <p><label for="adress">Address</label>
-            <input type="text" name="address" class="form__input" required></p>
+              <input type="text" name="address" class="form__input" required></p>
             <p><label for="city">City</label>
-            <input type="text" name="city" class="form__input" required></p>
+              <input type="text" name="city" class="form__input" required></p>
             <p><label for="zipcode">Zip code</label>
-            <input type="text" name="zipcode" class="form__input" required></p>
+              <input type="text" name="zipcode" class="form__input" required></p>
             <p><label for="country">Country</label>
-            <input type="text" name="country" class="form__input" required></p>
+              <input type="text" name="country" class="form__input" required></p>
             <p><label for="iban">Iban</label>
-            <input type="text" name="iban" class="form__input" required></p>
+              <input type="text" name="iban" class="form__input" required></p>
             <p><label for="swift-bic">Swift / Bic</label>
-            <input type="text" name="swift-bic" class="form__input" required></p>
+              <input type="text" name="swift-bic" class="form__input" required></p>
             <p><label for="bankcode">Bankcode (US)</label>
-            <input type="text" name="bankcode" class="form__input"></p>
+              <input type="text" name="bankcode" class="form__input"></p>
          </fieldset>
         </form>
 
-        <div class="save-changes-button"><a href="../account-producer.html" class="button1">Save changes</a></div>
-    </main>
-
-    <footer>
-
-    </footer>
+        <div class="save-changes-button">
+          <a href="../account-producer.html" class="button1">Save changes</a>
+        </div>
+     </main>
+  </body>
 </html>
