--- a/manage-account/manage-personaldetailes-watcher.html
+++ b/manage-account/manage-personaldetailes-watcher.html
@@ -16,36 +16,34 @@
       <div class="small-header-wrap">
         <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
-           <ul>
-            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-          </ul>
+            <ul>
+              <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            </ul>
           </nav>
-    </div>
-  </header>
+      </div>
+    </header>
 
     <main>
-    <form action="submit.php" method="GET">
+      <form action="submit.php" method="GET">
         <fieldset class="personal-information">
-            <h1 class="h1-form">Personal details</h1>
+          <h1 class="h1-form">Personal details</h1>
             <p><label for="fullname" class="">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
+              <input type="text" name="fullname" class="form__input" required></p>
             <p><label for="e-mail">E-mail</label>
-            <input type="text" name="e-mail" class="form__input" required></p>
+              <input type="text" name="e-mail" class="form__input" required></p>
             <p><label for="birthdate">Birth date</label>
-            <input type="text" name="birthdate" class="form__input"required></p>
+              <input type="text" name="birthdate" class="form__input"required></p>
             <p><label for="password">Choose your password</label>
-            <input type="text" name="password" class="form__input"required></p>
+              <input type="text" name="password" class="form__input"required></p>
             <div class="newsletter-section">
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
-            <p>Send newsletters to my e-mail address</p>
-        </div>
+              <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
+                <p>Send newsletters to my e-mail address</p>
+            </div>
         </fieldset>
      </form>
-     <div class="save-changes-button"><a href="../account-watcher.html" class="button1">Save changes</a></div>
-        </body>
+      <div class="save-changes-button">
+        <a href="../account-watcher.html" class="button1">Save changes</a>
+      </div>       
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
