--- a/create-watcher-account/watcher-personal.html
+++ b/create-watcher-account/watcher-personal.html
@@ -14,48 +14,48 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+        <a href="../index.html">
+          <img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
            <ul>
             <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-          </ul>
+           </ul>
           </nav>
-    </div>
-  </header>
+     </div>
+   </header>
 
     <main>
         <section class="circle-section">
-        <div class="active-circle">
+          <div class="active-circle">
             <i class="fas fa-circle"></i>
-        </div>
-        <div class="circle">  
+          </div>
+          <div class="circle">  
             <i class="fas fa-circle"></i>
-        </div>
+          </div>
+       </section>
 
-    </section>
-
-    <form action="submit.php" method="GET">
-        <fieldset class="personal-information">
-            <h1 class="h1-form">Personal information</h1>
-            <p><label for="fullname" class="">Full name</label>
-            <input type="text" name="fullname" class="form__input" required></p>
-            <p><label for="e-mail">E-mail</label>
-            <input type="text" name="e-mail" class="form__input" required></p>
-            <p><label for="birthdate">Birth date</label>
-            <input type="text" name="birthdate" class="form__input"required></p>
-            <p><label for="password">Choose your password</label>
-            <input type="text" name="password" class="form__input"required></p>
-            <div class="newsletter-section">
-            <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
-            <p>Send newsletters to my e-mail address</p>
-        </div>
-        </fieldset>
-        <button class="arrow-button"><a href="watcher-creditcard.html"><i class="fas fa-arrow-circle-right"></i></a></button>
-     </form>
-        </body>
-    </main>
-
-    <footer>
-
-    </footer>
+         <form action="submit.php" method="GET">
+            <fieldset class="personal-information">
+              <h1 class="h1-form">Personal information</h1>
+                <p><label for="fullname" class="">Full name</label>
+                  <input type="text" name="fullname" class="form__input" required></p>
+                <p><label for="e-mail">E-mail</label>
+                  <input type="text" name="e-mail" class="form__input" required></p>
+                <p><label for="birthdate">Birth date</label>
+                  <input type="text" name="birthdate" class="form__input"required></p>
+                <p><label for="password">Choose your password</label>
+                  <input type="text" name="password" class="form__input"required></p>
+                <div class="newsletter-section">
+                  <input type="checkbox" name="newsletter" value="newsletter" id="newsletter" class="newsletter">
+                    <p>Send newsletters to my e-mail address</p>
+                  </div>
+              </fieldset>
+            <button class="arrow-button">
+              <a href="watcher-creditcard.html">
+                <i class="fas fa-arrow-circle-right"></i>
+              </a>
+            </button>
+          </form>
+      </main>
+  </body>
 </html>
