--- a/create-watcher-account/watcher-success.html
+++ b/create-watcher-account/watcher-success.html
@@ -14,24 +14,26 @@
   <body>
     <header class="small-header">
       <div class="small-header-wrap">
-        <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
-          <nav class="right-nav">
-           <ul>
-            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-          </ul>
-          </nav>
-    </div>
-  </header>
+        <a href="../index.html">
+          <img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
+            <nav class="right-nav">
+              <ul>
+                <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+              </ul>
+           </nav>
+        </div>
+    </header>
 
     <main>
-        <section class="success-section">
-            <div class="check-icon-big"><i class="fas fa-check"></i></div>
-            <h1>You successfully became a member</h1>
-               <div><a href="../account-watcher.html" class="button1">Go to account</a></div>
-          </section>
+      <section class="success-section">
+        <div class="check-icon-big">
+          <i class="fas fa-check"></i>
+        </div>
+          <h1>You successfully became a member</h1>
+            <div>
+              <a href="../account-watcher.html" class="button1">Go to account</a>
+            </div>
+        </section>
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
