--- a/manage-account/manage-carddetials-watcher.html
+++ b/manage-account/manage-carddetials-watcher.html
@@ -16,36 +16,34 @@
       <div class="small-header-wrap">
         <a href="../index.html"><img src="../images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2">
           <nav class="right-nav">
-           <ul>
-            <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
-          </ul>
+            <ul>
+              <a href="../index.html"><i class="fas fa-home" style="font-size: 30px;"></i></a>
+            </ul>
           </nav>
-    </div>
-  </header>
+        </div>
+    </header>
 
     <main>
-            <form action="submit.php" method="GET">
-                <fieldset class="credit-card">
-                    <div class="grid-h1">
-                    <h1 class="h1-form">Payment settings</h1>
-                    </div>
-                    <p><label for="cardnumber">Cardnumber</label>
-                    <input type="text" name="cardnumber" class="form__input"></p>
-                    <p><label for="cardholdername">Cardholder name</label>
-                    <input type="text" name="cardholdername" class="form__input"></p>
-                    <p><label for="expiredate">Expire date</label>
-                    <input type="text" name="expiredate" class="form__input"></p>
-                    <p><label for="cvv">CVV</label>
-                    <input type="text" name="cvv" class="form__input"></p>
-                    <p><label for="country">Country</label>
-                    <input type="text" name="country" class="form__input"></p>
-                 </fieldset>              
-                 </form>
-                 <div class="save-changes-button"><a href="../account-watcher.html" class="button1">Save changes</a></div>
-    </body>
+      <form action="submit.php" method="GET">
+        <fieldset class="credit-card">
+          <div class="grid-h1">
+            <h1 class="h1-form">Payment settings</h1>
+          </div>
+            <p><label for="cardnumber">Cardnumber</label>
+              <input type="text" name="cardnumber" class="form__input"></p>
+            <p><label for="cardholdername">Cardholder name</label>
+               <input type="text" name="cardholdername" class="form__input"></p>
+            <p><label for="expiredate">Expire date</label>
+               <input type="text" name="expiredate" class="form__input"></p>
+            <p><label for="cvv">CVV</label>
+               <input type="text" name="cvv" class="form__input"></p>
+            <p><label for="country">Country</label>
+               <input type="text" name="country" class="form__input"></p>
+         </fieldset>              
+       </form>
+          <div class="save-changes-button">
+            <a href="../account-watcher.html" class="button1">Save changes</a>
+          </div>
     </main>
-
-    <footer>
-
-    </footer>
+  </body>
 </html>
