--- a/watch/watch2.html
+++ b/watch/watch2.html
@@ -27,18 +27,20 @@
   </head>
 
   <body class="black-background">
-    <a href="watch1.html">
-        <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
-    ></a></div>
-<section class="film-section">
-        <h1>Do you want to watch?
-        </h1>
-        <p class="text-align">Square Eyes is a pay-per-view streaming site. Only 2$ per film.</p>
-    <div class="watch-button">
-        <a href="watch3.html" class="button1">Go to payment</a>
-    </div>
-  </section>
-</main>
-</div>
-</body>
+    <main>
+        <a href="watch1.html">
+            <div class="back-icon">
+                <i class="fas fa-chevron-left" style="font-size: 30px"></i>
+            </div>
+        </a>
+
+        <section class="film-section">
+            <h1>Do you want to watch?</h1>
+                <p class="text-align">Square Eyes is a pay-per-view streaming site. Only 2$ per film.</p>
+                    <div class="watch-button">
+                        <a href="watch3.html" class="button1">Go to payment</a>
+                    </div>
+        </section>
+    </main>
+  </body>
 </html>
