--- a/account-watcher.html
+++ b/account-watcher.html
@@ -45,51 +45,61 @@
       </ul>
     </nav>
 
-  <a href="index.html">
+    <a href="index.html">
       <div class="back-icon">
-          <i class="fas fa-chevron-left"></i></a></div>
+          <i class="fas fa-chevron-left"></i>
+      </div>
+    </a>
 
-<h1>Account</h1>
-  
-    <div class="watcher-profile-grid">
-      <section>
-        <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture-watcher">
-      </section>
+    <h1>Account</h1>
+        <div class="watcher-profile-grid">
+            <section>
+                <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture-watcher">
+            </section>
 
-      <section class="personal-watcher">
-        <h2>Name:</h2>
-        <p>Nane Surname</p>
-        <h2>E-mail:</h2>
-        <p>email@email.com</p>
-        <h2>Phone number:</h2>
-        <p>+123 456 789</p>
-        <h2>Birth date:</h2>
-        <p>MMDDYEAR</p>
-      </section>
+            <section class="personal-watcher">
+                <h2>Name:</h2>
+                    <p>Name Surname</p>
+                <h2>E-mail:</h2>
+                    <p>email@email.com</p>
+                <h2>Phone number:</h2>
+                    <p>+123 456 789</p>
+                <h2>Birth date:</h2>
+                    <p>MMDDYEAR</p>
+            </section>
 
-      <section>
-        <a href="manage-account/manage-personaldetailes-watcher.html" class="button2">
-        <div class="button2-icon"><i class="fas fa-cog"></i>
-        </div>Manage profile</a>
-    <a href="manage-account/manage-carddetials-watcher.html" class="button2">
-            <div class="button2-icon">
-                <i class="far fa-credit-card"></i>
-        </div>Payment settings</a>
-  </section>
-  </div>
-</main>
+            <section>
+                <a href="manage-account/manage-personaldetailes-watcher.html" class="button2">
+                    <div class="button2-icon">
+                        <i class="fas fa-cog"></i>
+                    </div>Manage profile</a>
+                <a href="manage-account/manage-carddetials-watcher.html" class="button2">
+                    <div class="button2-icon">
+                        <i class="far fa-credit-card"></i>
+                    </div>Payment settings</a>
+            </section>
+        </div>
+    </main>
 
   <footer>
     <div class="footer-grid">
-      <section><a href="index.html"><img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
-       <section class="footer-nav">
-        <a href="index.html">Home</a>
-          <a href="films.html">Films</a>
+        <section><a href="index.html">
+            <img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
+        </section>
+        
+        <section class="footer-nav">
+            <a href="index.html">Home</a>
+            <a href="films.html">Films</a>
             <a href="producers.html">Producers</a>
-              <a href="search.html">Search</a>
-            </section>
-                <section><a href="#header"><i class="fas fa-arrow-up"></i></a></section>
-      </div>
+            <a href="search.html">Search</a>
+        </section>
+                
+        <section>
+            <a href="#header">
+                <i class="fas fa-arrow-up"></i>
+            </a>
+        </section>
+    </div>
   </footer>
-  </body>
+ </body>
 </html>
