--- a/film.html
+++ b/film.html
@@ -32,9 +32,9 @@
     ></a></div>
 <section class="film-section">
     <img src="images/film3-big.jpg" alt="Film title" class="film-big">
-    <div class="play-icon"><i class="far fa-play-circle"></i></div>
+    <div class="play-icon">
+      <i class="far fa-play-circle"></i>
+    </div>
   </section>
-</main>
-</div>
 </body>
 </html>
