--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </header>
   
    <main> 
-   <nav class="navbar">
+    <nav class="navbar">
        <ul style="margin-left: 59px;">
          <li><a href="index.html" class="active">Home</a></li>
          <li><a href="films.html">Films</a></li>
@@ -33,51 +33,62 @@
        </ul>
     </nav>
  
-      <section class="index-section1">
-        <div class="content-wrap">
-          <h1>Stream high quality independent films</h1> 
-        </div>
-      </section>
+    <section class="index-section1">
+      <div class="content-wrap">
+        <h1>Stream high quality independent films</h1> 
+      </div>
+    </section>
 
 
-      <section class="index-section2">
-        <div class="content-wrap">
+    <section class="index-section2">
+      <div class="content-wrap">
         <h2>Film-lover?</h2>
-         <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
-          <div class="index-button"><a href="films.html" class="button1">Explore our films</a></div>
-        </div>
-      </section>
+          <p>Explore and watch independent films crafted by producers that are passionate about film-making.</p>
+            <div class="index-button">
+              <a href="films.html" class="button1">Explore our films</a>
+            </div>
+      </div>
+    </section>
 
-      <section class="index-section3">
-        <div class="content-wrap">
-          <i class="fas fa-film"></i>
-         <h3>Pay-per-watch</h3>
-          <p>No monthly charges. Only 2$ per film. </p>
-        </div>
-      </section>
+    <section class="index-section3">
+      <div class="content-wrap">
+        <i class="fas fa-film"></i>
+          <h3>Pay-per-watch</h3>
+            <p>No monthly charges. Only 2$ per film. </p>
+      </div>
+    </section>
 
-      <section class="index-section4">
-        <div class="content-wrap">
+    <section class="index-section4">
+      <div class="content-wrap">
         <img src="images/man-filming.jpg" alt="Producer filming" class="index-picture">
-        <h4>Are you a producer?</h4>
-         <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
-         <div class="index-button"><a href="create-account.html" class="button2">Create an account</a></div>
-        </button> 
+          <h4>Are you a producer?</h4>
+            <p>Join Square Eyes now and get a wider reach and financially benefit when people watch your films.</p>
+              <div class="index-button">
+                <a href="create-account.html" class="button2">Create an account</a>
+              </div>
         </div>
       </section>
     </main>
    
     <footer>
       <div class="footer-grid">
-        <section><a href="index.html"><img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
-         <section class="footer-nav">
+        <section><a href="index.html">
+          <img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
+        </section>
+        
+        <section class="footer-nav">
           <a href="index.html">Home</a>
             <a href="films.html">Films</a>
               <a href="producers.html">Producers</a>
                 <a href="search.html">Search</a>
-              </section>
-                  <section><a href="#header"><i class="fas fa-arrow-up"></i></a></section>
-        </div>
+        </section>
+                  
+        <section>
+          <a href="#header">
+            <i class="fas fa-arrow-up"></i>
+          </a>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
