--- a/watch/watch3.html
+++ b/watch/watch3.html
@@ -27,32 +27,34 @@
   </head>
 
   <body class="black-background">
-    <a href="watch2.html">
-        <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
-    ></a></div>
-<section class="film-section">
-    <form action="submit.php" method="GET">
-        <fieldset class="credit-card">
-            <div class="grid-h1">
-            <h1 class="h1-form">Payment settings</h1>
+    <main>
+        <a href="watch2.html">
+            <div class="back-icon">
+                <i class="fas fa-chevron-left" style="font-size: 30px"></i>
             </div>
-            <p><label for="cardnumber">Cardnumber</label>
-            <input type="text" name="cardnumber" class="form__input"></p>
-            <p><label for="cardholdername">Cardholder name</label>
-            <input type="text" name="cardholdername" class="form__input"></p>
-            <p><label for="expiredate">Expire date</label>
-            <input type="text" name="expiredate" class="form__input"></p>
-            <p><label for="cvv">CVV</label>
-            <input type="text" name="cvv" class="form__input"></p>
-            <p><label for="country">Country</label>
-            <input type="text" name="country" class="form__input"></p>
-         </fieldset>              
-         </form>
-    <div class="watch-button">
-        <a href="watch4.html" class="button1">Continue</a>
-    </div>
-  </section>
-</main>
-</div>
-</body>
+        </a>
+        <section class="film-section">
+            <form action="submit.php" method="GET">
+                <fieldset class="credit-card">
+                    <div class="grid-h1">
+                        <h1 class="h1-form">Payment settings</h1>
+                    </div>
+                        <p><label for="cardnumber">Cardnumber</label>
+                            <input type="text" name="cardnumber" class="form__input"></p>
+                        <p><label for="cardholdername">Cardholder name</label>
+                            <input type="text" name="cardholdername" class="form__input"></p>
+                        <p><label for="expiredate">Expire date</label>
+                            <input type="text" name="expiredate" class="form__input"></p>
+                        <p><label for="cvv">CVV</label>
+                            <input type="text" name="cvv" class="form__input"></p>
+                        <p><label for="country">Country</label>
+                            <input type="text" name="country" class="form__input"></p>
+                 </fieldset>              
+              </form>
+            <div class="watch-button">
+                <a href="watch4.html" class="button1">Continue</a>
+            </div>
+        </section>
+    </main>
+  </body>
 </html>
