--- a/account-producer.html
+++ b/account-producer.html
@@ -47,12 +47,14 @@
 
   <a href="index.html">
       <div class="back-icon">
-          <i class="fas fa-chevron-left"></i></a></div>
+          <i class="fas fa-chevron-left"></i>
+      </div>
+  </a>
 
   <section class="manage-buttons">
-    
-        <a href="manage-account/manage-account-pro.html" class="button2">
-        <div class="button2-icon"><i class="fas fa-cog"></i>
+    <a href="manage-account/manage-account-pro.html" class="button2">
+        <div class="button2-icon">
+          <i class="fas fa-cog"></i>
         </div>Manage profile</a>
     <a href="manage-account/manage-bankdetails-pro.html" class="button2">
             <div class="button2-icon">
@@ -63,30 +65,37 @@
   <div class="producer-profile-grid">
       <section class="producer-section">
         <img src="images/blank-profile-picture.jpg" alt="Profile picture" class="profile-picture">
-        <h1>Name Surname</h1>
-         <p>Description</p>
+          <h1>Name Surname</h1>
+            <p>Description</p>
       </section>
 
       <section class="film-section">
         <img src="images/blank-film.jpg" alt="Upload film" class="film-big">
-        <h2>Film title</h2>
-        <h3>From:</h3>
-        <p>Film description</p>
-      </section>
-  </div>
-</main>
+          <h2>Film title</h2>
+            <h3>From:</h3>
+              <p>Film description</p>
+        </section>
+     </div>
+  </main>
 
   <footer>
     <div class="footer-grid">
-      <section><a href="index.html"><img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a></section>
+      <section><a href="index.html">
+        <img src="images/logo2.png" alt="SquareEyes - connecting film-lovers" class="logo2"></a>
+      </section>
+
        <section class="footer-nav">
         <a href="index.html">Home</a>
           <a href="films.html">Films</a>
             <a href="producers.html">Producers</a>
               <a href="search.html">Search</a>
-            </section>
-                <section><a href="#header"><i class="fas fa-arrow-up"></i></a></section>
+        </section>
+                
+        <section>
+          <a href="#header"><i class="fas fa-arrow-up"></i>
+          </a>
+        </section>
       </div>
-  </footer>
+    </footer>
   </body>
 </html>
