--- a/watch/watch4.html
+++ b/watch/watch4.html
@@ -27,15 +27,21 @@
   </head>
 
   <body class="black-background">
-    <a href="watch3.html".html">
-        <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i
-    ></a></div>
-    <section class="success-section">
-        <div class="check-icon-big"><i class="fas fa-check"></i></div>
-        <h1>Success</h1>
-        <p class="text-align">Thank you for your purchase. Enjoy your film!</p>
-           <div class="watch-button"><a href="../film.html" class="button1">Watch</a></div>
-      </section>
-</main>
-</div>
-</body>
+        <main>
+            <a href="watch3.html">
+                <div class="back-icon"><i class="fas fa-chevron-left" style="font-size: 30px"></i>
+                </div>
+            </a>
+            <section class="success-section">
+                <div class="check-icon-big">
+                    <i class="fas fa-check"></i>
+                </div>
+            <h1>Success</h1>
+                <p class="text-align">Thank you for your purchase. Enjoy your film!</p>
+                    <div class="watch-button">
+                        <a href="../film.html" class="button1">Watch</a>
+                    </div>
+            </section>
+        </main>
+    </body>
+</html>
