--- a/search.html
+++ b/search.html
@@ -35,17 +35,21 @@
       <main>
         <section>
           <h1>Search</h1>
-          <form action="submit.php" method="GET" class="form-section">
-            <input
-              type="text"
-              placeholder="Search.."
-              name="search"
-              class="search-input"
-            /><button class="search-button"><a href="search-results.html">
-              <div class="search-icon"><i class="fas fa-search"></i></div></a>
-            </button>
-          </form>
-          <p>Type in film title, producer, tags or category..</p>
+            <form action="submit.php" method="GET" class="form-section">
+              <input
+                type="text"
+                placeholder="Search.."
+                name="search"
+                class="search-input"/>
+                  <button class="search-button">
+                    <a href="search-results.html">
+                      <div class="search-icon">
+                        <i class="fas fa-search"></i>
+                      </div>
+                    </a>
+                  </button>
+            </form>
+            <p>Type in film title, producer, tags or category..</p>
         </section>
       </main>
     </div>
